<resources>
    <string name="app_name">TruyenFull</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="nav_updatestory">Home</string>
    <string name="nav_category">Category</string>
    <string name="nav_search">Search</string>

    <string name="infostory_title">Info Story</string>
    <string name="chapter_title">Chapter</string>

    <string name="name_story">Name Story</string>
    <string name="image_story">Image Story</string>
    <string name="author_story">Author</string>
    <string name="cat_story">Category</string>
    <string name="description_story">Description</string>

    <string name="name_chapter">Chapter</string>

    <string name="read_story">Read Story</string>
    <string name="list_chapter">List Chapters</string>

    <string name="back_infostory">Back to Info Story</string>
    <string name="title_list">Title</string>

    <string name="text_search">Search...</string>
</resources>
