<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ui.InfoStoryFragment">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/container_infostory"
        android:visibility="visible"
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageview_infostory"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/image_story"
                android:scaleType="fitXY"
                android:src="@drawable/loading"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textview_name_infostory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:gravity="center"
                android:text="@string/name_story"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/imageview_infostory" />

            <Button
                android:id="@+id/button_read_infostory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/read_story"
                app:layout_constraintEnd_toStartOf="@+id/button_list_chapter_infostory"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview_name_infostory" />


            <Button
                android:id="@+id/button_list_chapter_infostory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list_chapter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/button_read_infostory"
                app:layout_constraintTop_toBottomOf="@id/textview_name_infostory" />

            <TextView
                android:id="@+id/tv_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/author_story"
                app:layout_constraintTop_toBottomOf="@id/button_read_infostory"
                app:layout_constraintStart_toStartOf="parent"
                android:textStyle="bold"
                android:layout_margin="@dimen/default_margin" />

            <TextView
                android:id="@+id/textview_author_infostory"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/author_story"
                app:layout_constraintTop_toBottomOf="@id/button_read_infostory"
                app:layout_constraintStart_toEndOf="@id/tv_author"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="@dimen/default_margin" />

            <TextView
                android:id="@+id/tv_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cat_story"
                app:layout_constraintTop_toBottomOf="@id/tv_author"
                app:layout_constraintStart_toStartOf="parent"
                android:textStyle="bold"
                android:layout_margin="@dimen/default_margin" />

            <TextView
                android:id="@+id/textview_category_infostory"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/cat_story"
                app:layout_constraintTop_toBottomOf="@id/tv_author"
                app:layout_constraintStart_toEndOf="@id/tv_category"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="@dimen/default_margin" />

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description_story"
                app:layout_constraintTop_toBottomOf="@id/tv_category"
                app:layout_constraintStart_toStartOf="parent"
                android:textStyle="bold"
                android:layout_margin="@dimen/default_margin" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textview_description_infostory"
                android:text="@string/description_story"
                app:layout_constraintTop_toBottomOf="@id/tv_description"
                android:layout_margin="@dimen/default_margin"
                android:paddingBottom="@dimen/default_padding"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</LinearLayout>